<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/exit_game"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_cancel_btn"
            android:background="@drawable/shape_button_active"
            style="@style/dialog_home_button"
            android:text="@string/cancel" />
        <Button
            android:id="@+id/dialog_exit_btn"
            android:background="@drawable/shape_button_danger"
            style="@style/dialog_home_button"
            android:text="@string/exit" />
    </LinearLayout>
</LinearLayout>
