<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/home_options"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:gravity="center">

            <Button
                android:id="@+id/play_btn"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:background="@drawable/shape_button_play"
                android:fontFamily="@font/andika"
                android:text="play"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <Button
                android:visibility="gone"
                android:id="@+id/levels_btn"
                android:background="@drawable/shape_button_active"
                style="@style/home_button"
                android:text="@string/levels"/>
            <Button
                android:visibility="gone"
                android:id="@+id/follow_us_btn"
                android:background="@drawable/shape_button_active"
                style="@style/home_button"
                android:text="@string/follow_us" />
            <Button
                android:visibility="gone"
                android:id="@+id/sound_on_btn"
                android:background="@drawable/shape_button_active"
                style="@style/home_button"
                android:text="@string/sounds_on" />
            <Button
                android:visibility="gone"
                android:id="@+id/restart_btn"
                android:background="@drawable/shape_button_warning"
                style="@style/home_button"
                android:text="@string/restart" />
            <Button
                android:id="@+id/exit_btn"
                android:background="@drawable/icon_exit"
                style="@style/home_button" />
            <ImageButton
                android:background="@drawable/icon_setting"
                android:layout_width="64dp"
                android:layout_height="64dp"
                style="@style/home_button"
                android:text="@string/exit" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
