<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <!--<ImageView-->
            <!--android:id="@+id/title"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="center"-->
            <!--android:src="@drawable/ic_launcher_foreground"/>-->
        <LinearLayout
            android:id="@+id/home_options"
            android:layout_below="@id/title"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:gravity="center">

            <Button
                android:id="@+id/play_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:background="@color/colorButton"
                android:scaleType="center"
                android:text="@string/play"
                android:textAllCaps="true"
                android:textColor="@color/text_color"
                android:onClick="play" />
            <Button
                android:id="@+id/levels_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:background="@color/colorButton"
                android:scaleType="center"
                android:text="@string/levels"
                android:textAllCaps="true"
                android:textColor="@color/text_color"
                android:onClick="levels" />
            <Button
                android:id="@+id/follow_us_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:background="@color/colorButton"
                android:scaleType="center"
                android:text="@string/follow_us"
                android:textAllCaps="true"
                android:textColor="@color/text_color"
                android:onClick="followUs" />
            <Button
                android:id="@+id/sounds_on_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:background="@color/colorButton"
                android:scaleType="center"
                android:text="@string/sounds_on"
                android:textAllCaps="true"
                android:textColor="@color/text_color"
                android:onClick="soundsOn" />
            <Button
                android:id="@+id/restart_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:background="@color/colorButton"
                android:scaleType="center"
                android:text="@string/restart"
                android:textAllCaps="true"
                android:textColor="@color/text_color"
                android:onClick="restart" />
            <Button
                android:id="@+id/exit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:background="@color/colorButton"
                android:scaleType="center"
                android:text="@string/exit"
                android:textAllCaps="true"
                android:textColor="@color/text_color"
                android:onClick="exit" />
            <!--<Button-->
                <!--android:id="@+id/exit_btn"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:padding="5dp"-->
                <!--android:layout_margin="5dp"-->
                <!--android:background="@color/colorButton"-->
                <!--android:drawableLeft="@drawable/play"-->
                <!--android:scaleType="center"-->
                <!--android:text="@string/play"-->
                <!--android:textAllCaps="true"-->
                <!--android:textColor="@color/text_color" />-->
        </LinearLayout>
        <!--Privacy Policy-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_options">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:gravity="center_horizontal"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
